Point API to production backend server

--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
 
     <script>
         // API Base URL
-        const API_BASE = '';
+        const API_BASE = 'http://65.108.32.148:8080';
 
         // ============================================================================
         // TOAST NOTIFICATION SYSTEM
