--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
 
     <script>
         // API Base URL
-        const API_BASE = 'http://65.108.32.148:8080';
+        const API_BASE = 'https://kijiji-view-leisure-documentary.trycloudflare.com';
 
         // ============================================================================
         // TOAST NOTIFICATION SYSTEM
